guilds are no longer hidden under the window buttons
Also removes the Friends tab since I think it have no useness.

--- a/BetterUI.theme.css
+++ b/BetterUI.theme.css
@@ -1,7 +1,7 @@
 /**
  * @name Better UI Debug
  * @author Rashnain
- * @version 1.1.5
+ * @version 1.1.9
  * @description A theme that takes advantage of your entire screen, removes Stage Discovery and Nitro tabs, with more improvements for the user experience included.
  * @source https://github.com/Rashnain/BetterUI
 */
@@ -23,8 +23,8 @@
 
 
 /* Liste des messages privés */
-	/* Retire l'onglet Nitro et Stage Discovery */
-	.channel-2QD9_O[href="/store"], .channel-2QD9_O[href="/discovery"] {
+	/* Retire l'onglet Amis et Nitro */
+	.channel-2QD9_O[href="/channels/@me"], .channel-2QD9_O[href="/store"] {
 		display: none;
 	}
 	/* Réduit l'espacement au-dessus de "MESSAGES PRIVÉS" */
@@ -91,6 +91,22 @@
 	.scrollerSpacer-avRLaA {height: 5px}
 	/* Réduit la place autour des dates qui séparrent les messages */
 	.divider-3_HH5L.hasContent-1_DUdQ.divider-JfaTT5.hasContent-1cNJDh {margin: 10px}
+	/* Agrandi la taille des threads latéraux */
+	.threadSidebar-1o3BTy {width: 40%}
+	/* Réduit la marge latéral des messages */
+	.message-2qnXI6.cozyMessage-3V1Y8y.wrapper-2a6GCs.cozy-3raOZG {
+		padding-right: 5px !important;
+		padding-left: 60px;
+	}
+	/* Réduit l'espace autour de l'avatar de l'auteur d'un message */
+	.avatar-1BDn8e {left: 10px}
+	/* Réduit l'espace autour des conteneurs d'icône (appel, thread) */
+	.iconContainer-3GkGRf {width: 60px !important}
+	/* Adapte le petit fil des threads */
+	.message-2qnXI6.cozyMessage-3V1Y8y.wrapper-2a6GCs.cozy-3raOZG:after {
+		left: 29px !important;
+		width: 1.25em;
+	}
 
 
 /* Modification de message */
@@ -143,6 +159,10 @@
 		}
 		/* Fixe l'arrière plan des dossiers de serveurs */
 		.expandedFolderBackground-3ZDF05 {left: var(--fix-folder) !important}
+		/* Donne de la place aux serveurs (empêche qu'ils soit sous les boutons) */
+		.scroller-1Bvpku.none-2Eo-qx.scrollerBase-289Jih {
+			margin-bottom: calc(3 * calc(var(--server-size) + 15px));
+		}
 
 
 /* Améliore RadialStatus */
@@ -167,7 +187,11 @@
 	/* Réduit la hauteur de la barre d'outils (celle en permanence en haut de l'écran) */
 	.container-1r6BKw, .header-2V-4Sw, .searchBar-6Kv8R2 {height: 37px}
 	/* Réduit l'espace entre les cathégories de serveurs */
-	.containerDefault-3tr_sE {padding-top: 15px}
+	.containerDefault-3tr_sE {padding-top: 10px}
+	/* Fixe l'espace entre la bannière de serveur et les cathégories/salons */
+	.hasBanner-2SrLR3 + .positionedContainer-3LNR6L + .scrollerBase-289Jih > .content-3YMskv > div[style="height: 84px;"] {
+		height: 98px !important;
+	}
 	/* Réduit la place qu'utilise le bouton de fermeture des paramètres */
 	.toolsContainer-1edPuj {margin-right: 15px !important}
 	/* Image de l'onglet Nitro au milieu */
@@ -196,7 +220,3 @@
 	.unreadMentionsIndicatorBottom-2mDYbI {display: none}
 	/* Retire le bouton de découverte de serveurs publics */
 	.tutorialContainer-3alCZm + .listItem-2Ig28I {display: none}
-	/* (Avec HSL) Donne de la place aux serveurs (empêche qu'ils soit sous les boutons) */
-	.scroller-1Bvpku.none-2Eo-qx.scrollerBase-289Jih {
-		margin-bottom: calc(3 * calc(var(--server-size) + 15px));
-	}
